# IntelliReview

./: .PHONY  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  Dockerfile.worker  README.md  buggy.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  learned_patterns.json  package-lock.json  package.json  pyproject.toml  pyproject.toml`  pytest.ini  readme.md  requirements-dev.txt  requirements-full.txt  requirements.txt  ruff.toml  task.md  task2.md  temp.py  test.py  test.python  test_e2e.py  test_syntax_errors.py  vercel.json  verify_final.py  verify_history.py  verify_multilang.py  verify_suggestions.py
.github/workflows/: ci.yml
analyzer/: __init__.py
analyzer/context/: __init__.py  ast_diff_mapper.py  project_context.py
analyzer/detectors/: ai_patterns.py  antipatterns.py  base.py  quality.py  security.py
analyzer/feedback/: __init__.py  confidence_router.py  feedback_generator.py  learning_loop.py  pr_gate.py  reachability.py  severity_orchestrator.py  verification.py
analyzer/metrics/: complexity.py  duplication.py
analyzer/parsers/: base_parser.py  cpp_parser.py  java_parser.py  javascript_parser.py  python_parser.py
analyzer/pipeline/: diff_review_pipeline.py
analyzer/rules/: __init__.py  custom_rules.py  policy_engine.py
analyzer/scoring/: delta_score.py
analyzer/utils/: __init__.py  redactor.py
api/: __init__.py  auth.py  celery_app.py  database.py  logging.py  main.py  mcp_server.py  metrics.py
api/auth/: github_app.py
api/middleware/: __init__.py  audit_middleware.py  auth_middleware.py  github_permissions.py  logging_middleware.py  rate_limit.py  resilience.py
api/models/: __init__.py  analysis.py  audit.py  feedback.py  project.py  rule_telemetry.py  user.py
api/routes/: __init__.py  analysis.py  auth.py  feedback.py  history.py  metrics.py  oauth_device.py  policies.py  queue_status.py  research.py  review_feedback.py  webhooks.py  websocket.py
api/schemas/: __init__.py  analysis.py  feedback.py  feedback_schemas.py  user.py
api/tasks/: analysis_tasks.py  rollup_tasks.py
cli/: __init__.py  cli.py
config/: settings.py
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
dashboard/src/: index.css  intellireview_dashboard.tsx  main.tsx  types.d.ts
docs/: architecture.md  gold_standard_template.md  runbook.md  security.md
hooks/: pre_commit.py
integrations/vscode/: extension.js  package.json
kubernetes/: deployment.yaml
ml_models/: __init__.py  code_smell_detector.py  context_analyzer.py  pattern_learner.py
ml_models/agents/: __init__.py  orchestrator.py  tech_debt_agent.py
nginx/: nginx.conf
scratch/: fastapi_test.py
scripts/: benchmark_fpr.py  generate_secret_key.py  seed_data.py  start.sh
services/analysis-history/: go.mod  (+2 more)
tests/: __init__.py  conftest.py  test_ablation_study.py  test_agentic_evolution.py  test_ast_diff_mapper_benchmark.py  test_confidence_router.py  test_feedback_generator.py  test_learning_loop_simulation.py  test_queue_status.py  test_system_qa.py  verify_diff_mode.py
vscode-extension/: package-lock.json  package.json
(+62 files in other folders)
