[project]
name = "intellireview"
version = "0.1.0"
description = "IntelliReview - Enterprise-grade AI code review platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "pymongo>=4.6.0",
    "mutmut>=1.4.0",
    "pytest-playwright>=0.4.0",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "langchain>=0.1.15",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.35",
    "langchain-google-genai>=1.0.1",
    "huggingface_hub>=0.24.1",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "pylint>=3.0.3",
    "flake8>=6.1.0",
    "radon>=6.0.1",
    "bandit>=1.7.5",
    "esprima>=4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "GitPython>=3.1.40",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "mcp>=1.0.0",
    "PyGithub>=2.1.1",
    "aiofiles>=23.2.1",
]

[project.scripts]
intellireview = "cli.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ARG", # flake8-unused-arguments
    "PL",  # pylint
]
ignore = [
    "PLR", # Design related pylint codes - too strict for now
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=api --cov=analyzer --cov=ml_models -W ignore::DeprecationWarning"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[tool.mutmut]
paths = ["analyzer/feedback/severity_orchestrator.py", "analyzer/detectors/security_detector.py"]
runner = "pytest"
threshold = 80

[tool.coverage.run]
source = ["api", "analyzer", "ml_models"]
omit = [
    "*/__pycache__/*",
    "*/test_*",
    "*/vendor/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_name_undefined = true
follow_imports = "silent"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[build-system]
requires = ["setuptools>=68", "wheel>=0.40"]
build-backend = "setuptools.build_meta"
